# SPERR

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GTestCMake.txt.in  README.md  SPERR.pc.in  SpeckConfig.h.in  SperrConfig.h.in
.github/workflows/: clang-format-check.yml  clang-format.yml  clang-tidy-qz.yml  clang-tidy-size.yml  clang-tidy.yml  cmake-release-qz.yml  cmake-release-size.yml  codeql-analysis.yml  unit-test-qz.yml  unit-test-size.yml  unit-test.yml
QccPack-0.61-1/: CHANGELOG  Imake.rules  Imake.tmpl  Imakefile  LICENSE-LGPL  QccPack.config.California  QccPack.config.chrx  QccPack.config.cisl-jasper  QccPack.config.cisl-vapor  QccPack.config.cygwin  QccPack.config.darwin  QccPack.config.irix  QccPack.config.linux  QccPack.config.rpi  QccPack.config.solaris  README  RELEASE_NOTES  logo.sed
QccPack-0.61-1/Data/Codes/: Baicheva16.crc  Ungerboeck.2.tcd  Ungerboeck.3.tcd  Ungerboeck.7.tcd  atm8.crc  c2.crc  ccitt16.crc  ccitt4.crc  crc10.crc  crc12.crc  crc32.crc  crc5.crc  crc6.crc  crc7.crc  darc14.crc
QccPack-0.61-1/Data/Images/: README
QccPack-0.61-1/Data/Matlab/: icbread.m  icbwrite.m
QccPack-0.61-1/Data/Misc/: EZW-Example.sbp
QccPack-0.61-1/Data/Wavelets/: ChuiLian.2x2.3.vfb  ChuiLian.2x2.4.vfb  CohenDaubechiesFeauveau.5-3.fbk  CohenDaubechiesFeauveau.5-3.int.lft  CohenDaubechiesFeauveau.5-3.lft  CohenDaubechiesFeauveau.9-3.fbk  CohenDaubechiesFeauveau.9-7.fbk  CohenDaubechiesFeauveau.9-7.int.lft  Daubechies.10.fbk  Daubechies.4.fbk  Daubechies.4.lft  Daubechies.6.fbk  Daubechies.8.fbk  Daubechies.Diagonal.2x2.4.vfb  Daubechies.Diagonal.2x2.6.vfb  DavisStrelaTurcajova.lifting.2x2.10-5.vfb  DavisStrelaTurcajova.lifting.2x2.5-7.vfb  GeronimoHardinMassopust.2x2.4.vfb  Haar.fbk  HontschKaramSafranek.10.pcp  LWT.int.lft  LWT.lft  LebrunVetterli.Balanced.2x2.3.vfb  LebrunVetterli.Balanced.2x2.5.vfb  LebrunVetterli.Balanced.2x2.7.vfb  LebrunVetterli.ComplexDaubechies.2x2.6.vfb  Selesnick.3Balanced.2x2.8.vfb  ShenTanTham.2x2.4.vfb  Strela.2x2.6-2.vfb  Strela.Order2.2x2.3-5.vfb  Strela.Order4.2x2.3-5.vfb  coiflet.6.fbk
QccPack-0.61-1/scripts/: install_cygwin  make_dist  remove_tabs  rm_cygwin  substr
QccPack-0.61-1/src/: Imakefile
QccPack-0.61-1/src/libQccPack/: Imakefile
QccPack-0.61-1/src/libQccPackAVQ/: Imakefile
QccPack-0.61-1/src/libQccPackECC/: Imakefile
QccPack-0.61-1/src/libQccPackENT/: Imakefile
QccPack-0.61-1/src/libQccPackHYP/: Imakefile
QccPack-0.61-1/src/libQccPackIMG/: Imakefile
QccPack-0.61-1/src/libQccPackSPECK/: CHANGELOG-SPECK  Imakefile  LICENSE-3D-SPECK  LICENSE-SPECK  README-SPECK  RELEASENOTES-SPECK
QccPack-0.61-1/src/libQccPackSQ/: Imakefile
QccPack-0.61-1/src/libQccPackVID/: Imakefile
QccPack-0.61-1/src/libQccPackVQ/: Imakefile
custom_filter/: Matthias_Filter.cpp  Matthias_Filter.h  README.md
cython/: compstats.py  errboundstats.py  setup.py  speck3d.cpp  speck3d.pyx
docker/: Dockerfile  README.md
docs/: index.md
evaluations/: evaluate_compress.sh
evaluations/compare_zfp_sz/: PSNR_to_BPP_plot.gp
examples/C_API/: 2d.c  2d_qz.c  2d_size.c  3d.c  3d_qz.c  3d_size.c  Makefile  test.c  test.sh  test_qz.sh  test_size.sh
include/: Analyzer.h  Base_Filter.h  Bitmask.h  Bitstream.h  CDF97.h  CDF97_PL.h  Conditioner.h  Matthias_Filter.h  Outlier_Coder.h  SPECK1D_INT.h  SPECK1D_INT_DEC.h  SPECK1D_INT_ENC.h  SPECK2D.h  SPECK2D_Compressor.h  SPECK2D_Decompressor.h  SPECK2D_FLT.h  SPECK2D_INT.h  SPECK2D_INT_DEC.h  SPECK2D_INT_ENC.h  SPECK3D.h  SPECK3D_Compressor.h  SPECK3D_Decompressor.h  SPECK3D_FLT.h  SPECK3D_INT.h  SPECK3D_INT_DEC.h  SPECK3D_INT_Driver.h  SPECK3D_INT_ENC.h  SPECK3D_OMP_C.h  SPECK3D_OMP_D.h  SPECK_FLT.h  SPECK_INT.h  SPECK_INT_Driver.h  SPECK_Storage.h  SPERR.h  SPERR2D_Compressor.h  SPERR2D_Decompressor.h  SPERR3D.h  SPERR3D_Compressor.h  SPERR3D_Decompressor.h  SPERR3D_INT_Driver.h  (+10 more)
src/: .clang-format  Analyzer.cpp  Base_Filter.cpp  Bitmask.cpp  Bitstream.cpp  CDF97.cpp  CDF97.h  CDF97_PL.cpp  CMakeLists.txt  Conditioner.cpp  Conditioner.h  Makefile  Makefile.manual  Matthias_Filter.cpp  Outlier_Coder.cpp  PURE_TEST.cpp  SPECK.cpp  SPECK.h  SPECK1D_FLT.cpp  SPECK1D_INT.cpp  SPECK1D_INT_DEC.cpp  SPECK1D_INT_ENC.cpp  SPECK2D.cpp  SPECK2D.h  SPECK2D_Compressor.cpp  SPECK2D_Compressor.h  SPECK2D_Decompressor.cpp  SPECK2D_Decompressor.h  SPECK2D_FLT.cpp  SPECK2D_INT.cpp  SPECK2D_INT_DEC.cpp  SPECK2D_INT_ENC.cpp  SPECK3D.cpp  SPECK3D.h  SPECK3D_Compressor.cpp  SPECK3D_Compressor.h  SPECK3D_Decompressor.cpp  SPECK3D_Decompressor.h  SPECK3D_Err.cpp  SPECK3D_Err.h  (+43 more)
test_data/: 100x100.float  128x128.nc  85x85.float  ball.100x100.float  data16.in  generate.cpp  pgm2float.cpp  pressur_384x384.d64  test_results.md  test_results_3d.md  wmag12.float  wmag8.float
test_scripts/: CMakeLists.txt  bit_buffer_unit_test.cpp  bitstream_unit_test.cpp  dwt2d_unit_test.cpp  dwt_unit_test.cpp  outlier_coder_unit_test.cpp  speck2d_flt_unit_test.cpp  speck2d_unit_test.cpp  speck3d_err_unit_test.cpp  speck3d_flt_unit_test.cpp  speck3d_int_unit_test.cpp  speck3d_unit_test.cpp  speck_err_unit_test.cpp  speck_helper_unit_test.cpp  speck_int_unit_test.cpp  sperr2d_unit_test.cpp  sperr3d_int_unit_test.cpp  sperr3d_omp_unit_test.cpp  sperr3d_unit_test.cpp  sperr_helper_unit_test.cpp  sperr_unit_test.cpp  stream_tools_unit_test.cpp
utilities/: CMakeLists.txt  Makefile  calc_stats.c  compare_raw.c  compare_raw.cpp  compressor_2d.cpp  compressor_3d.cpp  crop2d.c  crop3d.cpp  crop_3d.cpp  decompressor_2d.cpp  decompressor_3d.cpp  double_prec.cpp  evaluate2d.c  evaluate2d_qcc.c  example_dwt2d.cpp  example_dwt3d.cpp  example_qcc_dwt2d.c  example_qcc_dwt3d.c  example_qcc_speck2d.c  example_qcc_speck3d.c  example_speck2d.cpp  example_speck3d.cpp  example_speck3d_err.cpp  example_speck_err.cpp  example_sperr.cpp  expt.cpp  float2nc.c  header_parser.cpp  helper.c  helper.h  main.c  mid-tread.cpp  probe_3d_qz.cpp  probe_3d_size.cpp  put_back_3d.cpp  read_3d_val.cpp  show_version.cpp  slice_rmse.cpp  sperr2d.cpp  (+9 more)
utilities/old_files/: example_dwt2d.cpp
utilities/qccpack/: example_qcc_dwt3d.c
(+1871 files in other folders)
